2018-06-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.8.0.
	* Makefile.am, version.ac, include/Makefile.am: Adjusted.

2018-03-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.6.
	* Makefile.am, version.ac, include/Makefile.am: Adjusted.

2018-01-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.5.
	* Makefile.am, version.ac: Adjusted.

2018-01-09  Karl Berry  <karl@freefriends.org>

	* configure.ac: use AX_CXX_COMPILE_STDCXX([11],,[optional])
	since this is supposed to work with C++11.
	(KPSE_COMPILER_VISIBILITY): call this instead of hardwiring
	-fvisibility-inlines-hidden.

2017-12-26  Karl Berry  <karl@tug.org>

	* configure.ac (CXXFLAGS): add -D_GNU_SOURCE.
	From Ken Brown, tlbuild mail 26 Dec 2017 11:09:01.

2017-12-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.4.
	* version.ac: Adjusted.

2017-12-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.3.
	* version.ac: Adjusted.

2017-12-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.2.
	* version.ac: Adjusted.

2017-11-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.1.
	* version.ac: Adjusted.

2017-11-14  Karl Berry  <karl@tug.org>

	* configure.ac (KPSE_BASIC): pass Automake option no-define
	to stop the #define of VERSION (and PACKAGE), which harfbuzz
	and/or C++ is apparently now using for its own incompatible purposes.
	* config.h.in (PACKAGE, VERSION): hence auto-removed (by aclocal).

2017-11-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.0.
	* Makefile.am, version.ac: Adjusted.

2017-10-31  Karl Berry  <karl@freefriends.org>

	* configure.ac: update AC_CHECK_FUNCS and AC_CHECK_HEADERS
	for 1.6.3.
	(CXXFLAGS): merge gcc additions from distribution source,
	most notably including -std=c++11.
	(HAVE_GCC): new conditional, also from dist source.

2017-10-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.6.3.
	* version.ac: Adjusted.